--- a/vbam.ini
+++ b/vbam.ini
@@ -178,13 +178,13 @@ GBSurround=0
 Quality=44
 Volume=100
 [Recent]
-file1=C:\\Users\\Scott\\gbadev\\Homebound\\Homebound\\Homebound\\homebound.gba
-file2=C:\\Users\\Scott\\Desktop\\directsound\\soundtest2.gba
-file3=E:\\GBA_Dev\\Homebound\\Homebound\\Homebound\\homebound.gba
-file4=C:\\Users\\kmn3831\\Desktop\\GBA_Dev\\Homebound\\Homebound\\Homebound\\homebound.gba
-file5=G:\\Homebound\\Homebound\\Homebound\\homebound.gba
-file6=C:\\Users\\Scott\\Desktop\\GBA_Dev\\Homebound\\Homebound\\Homebound\\homebound.gba
-file7=
+file1=C:\\Users\\Scott\\gbadev\\Game 2 - Scott Mackenzie\\Gold Build\\Homebound.gba
+file2=C:\\Users\\Scott\\gbadev\\Homebound\\Homebound\\Homebound\\homebound.gba
+file3=C:\\Users\\Scott\\Desktop\\directsound\\soundtest2.gba
+file4=E:\\GBA_Dev\\Homebound\\Homebound\\Homebound\\homebound.gba
+file5=C:\\Users\\kmn3831\\Desktop\\GBA_Dev\\Homebound\\Homebound\\Homebound\\homebound.gba
+file6=G:\\Homebound\\Homebound\\Homebound\\homebound.gba
+file7=C:\\Users\\Scott\\Desktop\\GBA_Dev\\Homebound\\Homebound\\Homebound\\homebound.gba
 file8=
 file9=
 file10=
